Fixed height responsiveness 1600px+

--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
                 <h1>Welcome to Pipper!</h1>
                 <div class='todo'>
                     <a id='login' href='#'>Log in</a>
-                    <div id='loginBox'>
-                        <h3>Log in</h3>
-                        <h4>Email</h4>
-                        <input type='text'>
-                        <h4>Password</h4>
-                    </div>
                 </div>
                 <div class='todo'>
                     <a id='signup' href='#'>Sign up</a>
@@ -36,7 +30,15 @@
                 <p><strong>GitHub: </strong><a href='https://github.com/FrederickMunro'>FrederickMunro</a></p>
             </div>
             <div id='bottom'>
-                <a id='contact' href='#'>Contact Information</a>
+                <div id='fullContact'>
+                    <a id='contact' href='#'>Contact Information</a>
+                    <div id='contactBox'>
+                        <h3>Contact Information</h3>
+                        <p><strong>Email: </strong>fredjmunro@gmail.com</p>
+                        <p><strong>Phone: </strong>(514) 647-8213</p>
+                        <p><strong>GitHub: </strong><a href='https://github.com/FrederickMunro'>FrederickMunro</a></p>
+                    </div>
+                </div>
             </div>
             <script type='text/javascript' src='scripts/index.js'></script>
         </body>
