Fixed 'contact information' menu

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                     <a id='signup' href='#'>Sign up</a>
                 </div>
             </div>
+            <!--
             <div id='contactBox'>
                 <h3>Contact Information</h3>
                 <p><strong>Email: </strong>fredjmunro@gmail.com</p>
                 <p><strong>Phone: </strong>(514) 647-8213</p>
                 <p><strong>GitHub: </strong><a href='https://github.com/FrederickMunro'>FrederickMunro</a></p>
-            </div>
+            </div> -->
             <div id='bottom'>
                 <div id='fullContact'>
                     <a id='contact' href='#'>Contact Information</a>
