Added login button functionality

--- a/index.html
+++ b/index.html
@@ -10,26 +10,20 @@
             <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         </head>
         <body>
+
             <div id='left'>
                 <img id='largeLogo' src='images/origami.png' alt='Log in page logo'>
             </div>
+
             <div id='right'>
                 <img id='smallLogo' src='images/origami.png' alt='Small logo'>
-                <h1>Welcome to Pipper!</h1>
-                <div class='todo'>
-                    <a id='login' href='#'>Log in</a>
-                </div>
-                <div class='todo'>
-                    <a id='signup' href='#'>Sign up</a>
+                <h1 id='test'>Welcome to Pipper!</h1>
+                <div id='menu'>
+                    <div class='choices'>Log in</div>
+                    <div class='choices'>Sign up</div>
                 </div>
             </div>
-            <!--
-            <div id='contactBox'>
-                <h3>Contact Information</h3>
-                <p><strong>Email: </strong>fredjmunro@gmail.com</p>
-                <p><strong>Phone: </strong>(514) 647-8213</p>
-                <p><strong>GitHub: </strong><a href='https://github.com/FrederickMunro'>FrederickMunro</a></p>
-            </div> -->
+
             <div id='bottom'>
                 <div id='fullContact'>
                     <a id='contact' href='#'>Contact Information</a>
@@ -41,6 +35,7 @@
                     </div>
                 </div>
             </div>
+
             <script type='text/javascript' src='scripts/index.js'></script>
         </body>
     </html>
