Created login box animations

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img id='smallLogo' src='images/origami.png' alt='Small logo'>
                 <h1 id='test'>Welcome to Pipper!</h1>
                 <div id='menu'>
-                    <div class='choices'>Log in</div>
+                    <div class='choices'>Log in<br></div>
                     <div class='choices'>Sign up</div>
                 </div>
             </div>
